--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,52 +6,49 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <!--     for samsung devices    -->
+    <!-- for samsung devices -->
     <uses-permission android:name="com.samsung.permission.SSENSOR_HRM_RAW_PPG" />
     <uses-permission android:name="com.samsung.permission.HRM_EXT" />
     <uses-permission android:name="com.samsung.permission.SSENSOR" />
     <uses-permission android:name="com.samsung.helphub.permission.write_data" />
     <uses-permission android:name="com.samsung.helphub.permission.get_data" />
     <uses-permission android:name="com.samsung.helphub.permission.help" />
-    <!--  -->
 
+    <!--  -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="android.max_aspect"
             android:value="2.1" />
 
         <!-- auto-boot up -->
         <receiver
-            android:name="com.ideaone.reveraprojectapp1.yourActivityRunOnStartup"
+            android:name=".yourActivityRunOnStartup"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
-
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-
         </receiver>
 
         <activity
-            android:name="com.ideaone.reveraprojectapp1.MainActivity"
+            android:name=".MainActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -59,9 +56,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="6490aa656e85fc288d960aa877ad52147c0eb587" />
+
+        <activity android:name=".SettingsActivity"
+            android:screenOrientation="landscape">
+
+        </activity>
     </application>
 
 </manifest>
