--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.ideaone.reveraprojectapp1">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -56,15 +57,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:screenOrientation="landscape">
+        </activity>
 
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="6490aa656e85fc288d960aa877ad52147c0eb587" />
 
-        <activity android:name=".SettingsActivity"
-            android:screenOrientation="landscape">
-
-        </activity>
     </application>
 
 </manifest>
